--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node .",
+    "start-dev": "nodemon .",
     "register": "node register.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,5 +22,8 @@
     "mongodb": "^4.1.1",
     "qs": "^6.10.1",
     "retry-axios": "^2.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
