--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "axios": "^0.21.4",
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
+    "dotenv": "^16.0.0",
     "moment": "^2.29.1",
     "mongodb": "^4.1.1",
     "qs": "^6.10.1",
     "retry-axios": "^2.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "prettier": "^2.6.1"
   }
 }
