--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines":{
+  "engines": {
     "node": "16.x"
   },
   "scripts": {
     "start": "node .",
     "start-dev": "nodemon .",
     "register": "node register.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +29,7 @@
     "retry-axios": "^2.6.0"
   },
   "devDependencies": {
+    "jest": "^28.1.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.1"
   }
